@@ -1,3 +1,7 @@
+ * Bump Spark version to 1.6-SNAPSHOT and add Apache Snapshot repository to resolvers (SPARKC-272)
+
+********************************************************************************
+
 1.5.0 M2
  * Bump Java Driver to 2.2.0-rc3, Guava to 16.0.1 and test against Cassandra 2.2.1 (SPARKC-229)
  * Includes all patches up to 1.4.0.
